--- a/index.html
+++ b/index.html
@@ -8,39 +8,41 @@
     </head>
     <body>
         <div class="container">
-            <h1>Joy division</h1>
-            <h2>New Dawn Fades</h2>
-            <p>
-            A change of speed, a change of style<br>
-            A change of scene, with no regrets<br>
-            A chance to watch, admire the distance<br>
-            Still occupied, though you forget<br>
-            </p>
-            <p>
-            Different colors, different shades<br>
-            Over each mistakes were made<br>
-            I took the blame<br>
-            </p>
-            <p>
-            Directionless so plain to see<br>
-            A loaded gun won't set you free<br>
-            So you say<br>
-            </p>
-            <p>
-            We'll share a drink and step outside<br>
-            An angry voice and one who cried<br>
-            'We'll give you everything and more<br>
-            The strain is too much, can't take much more<br>
-            </p>
-            <p>
-            Oh, I've walked on water, run through fire<br>
-            Can't seem to feel it anymore<br>
-            It was me, waiting for me<br>
-            Hoping for something more<br>
-            Me, seeing me this time<br>
-            Hoping for something else<br>
-            </p>
-            <p>From <span>Unknown Pleasures</span> (album release date: 1979)</p>
-        </div>
+            <div class="content">
+                <h1>Joy division</h1>
+                <h2>New Dawn Fades</h2>
+                <p>
+                A change of speed, a change of style<br>
+                A change of scene, with no regrets<br>
+                A chance to watch, admire the distance<br>
+                Still occupied, though you forget<br>
+                </p>
+                <p>
+                Different colors, different shades<br>
+                Over each mistakes were made<br>
+                I took the blame<br>
+                </p>
+                <p>
+                Directionless so plain to see<br>
+                A loaded gun won't set you free<br>
+                So you say<br>
+                </p>
+                <p>
+                We'll share a drink and step outside<br>
+                An angry voice and one who cried<br>
+                'We'll give you everything and more<br>
+                The strain is too much, can't take much more<br>
+                </p>
+                <p>
+                Oh, I've walked on water, run through fire<br>
+                Can't seem to feel it anymore<br>
+                It was me, waiting for me<br>
+                Hoping for something more<br>
+                Me, seeing me this time<br>
+                Hoping for something else<br>
+                </p>
+                <p>From <span>Unknown Pleasures</span> (album release date: 1979)</p>
+            </div>
+        </div>  
     </body>
 </html>
